필요한 태그에 id 부여  - 내 번호는 kt 코드에 직접 작성 예정

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,36 +21,42 @@
 
 
         <TextView
+            android:id="@+id/txtWinNum01"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:text="\?"/>
 
         <TextView
+            android:id="@+id/txtWinNum02"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:layout_marginStart="10dp"
             android:text="\?"/>
         <TextView
+            android:id="@+id/txtWinNum03"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:layout_marginStart="10dp"
             android:text="\?"/>
         <TextView
+            android:id="@+id/txtWinNum04"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:layout_marginStart="10dp"
             android:text="\?"/>
         <TextView
+            android:id="@+id/txtWinNum05"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:layout_marginStart="10dp"
             android:text="\?"/>
         <TextView
+            android:id="@+id/txtWinNum06"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
@@ -63,6 +69,7 @@
             android:layout_marginStart="10dp"
             android:text="\+"/>
         <TextView
+            android:id="@+id/txtBonusNum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
@@ -71,6 +78,9 @@
 
 
     </LinearLayout>
+
+
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -127,6 +137,7 @@
 
 
     <Button
+        android:id="@+id/btnBuyLotto"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
