등수 별 횟수 카운팅 + 텍스트뷰에 반영

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -187,6 +187,133 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1등 : "/>
+
+        <TextView
+            android:id="@+id/txtRankCount1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0회"
+            android:textSize="16sp"
+            />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:layout_marginTop="3dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2등 : "/>
+
+        <TextView
+            android:id="@+id/txtRankCount2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0회"
+            android:textSize="16sp"
+            />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:layout_marginTop="3dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="3등 : "/>
+
+        <TextView
+            android:id="@+id/txtRankCount3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0회"
+            android:textSize="16sp"
+            />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:layout_marginTop="3dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="4등 : "/>
+
+        <TextView
+            android:id="@+id/txtRankCount4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0회"
+            android:textSize="16sp"
+            />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:layout_marginTop="3dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="5등 : "/>
+
+        <TextView
+            android:id="@+id/txtRankCount5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0회"
+            android:textSize="16sp"
+            />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:layout_marginTop="3dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="낙첨 : "/>
+
+        <TextView
+            android:id="@+id/txtRankCountFail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0회"
+            android:textSize="16sp"
+            />
+
+    </LinearLayout>
 
 
 </LinearLayout>
