--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -143,6 +143,12 @@
         android:layout_height="wrap_content"
         android:text="로또 한장 구매하기"/>
 
+    <Button
+        android:id="@+id/btnBuyRandom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="로또 자동 반복 구매하기"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
